frontend/test/should_pass/exec_007.grg
using enum_model_001;

rule r1(x:A) {
  y:A;
  replace {
    y;
    exec(r1(y));
  }
}

